k8s/frontend/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-frontend-deployment
  labels:
    app: blog-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: blog-frontend-pod
  template:
    metadata:
      labels:
        app: blog-frontend-pod
    spec:
      containers:
      - name: blog-frontend-container
        image: prass6naa/blog-frontend:0f85c71
        ports:
        - containerPort: 80
        

---

apiVersion: v1
kind: Service
metadata:
  name: blog-frontend-service
spec:
  type: ClusterIP
  selector:
    app: blog-frontend-pod
  ports:
    - name: http
      port: 80
      targetPort: 80
